feat: add plausible analytics

--- a/views/404.jade
+++ b/views/404.jade
@@ -11,6 +11,9 @@ html
     link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
 
     title panX
+
+    include components/plausible
+
   body
     include components/navbar
     .container
