--- a/views/components/pipeline.jade
+++ b/views/components/pipeline.jade
@@ -10,6 +10,8 @@ html
     link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     title panX
 
+    include plausible
+
   body
     include navbar_pipeline
     .container
