--- a/views/download.jade
+++ b/views/download.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', type='text/css', href='bower_components/bootstrap/dist/css/bootstrap.min.css', media='screen')
     |     
     link(type='text/css', rel='stylesheet', href='privateAsset/page-appearance.css')
+    include components/plausible
   body
     .navbar.navbar-default.navbar-fixed-top(role='navigation')
       .container
