--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,7 @@ html
     link(type='text/css', rel='stylesheet', href='stylesheets/page-appearance.css')
     link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     title panX
+    include components/plausible
 
   body
     include components/navbar
