--- a/views/tutorial.jade
+++ b/views/tutorial.jade
@@ -10,6 +10,7 @@ html
 
     link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     title panX: pan-genome analysis & exploration
+    include components/plausible
 
   body(data-spy='scroll', data-target='#myScrollspy', data-offset='100')
     include components/navbar_tutorial
