--- a/views/components/layout.jade
+++ b/views/components/layout.jade
@@ -33,6 +33,9 @@ html
     link(rel="stylesheet", type="text/css", href='stylesheets/fontawesome-customized.css')
     link(rel="icon", type="image/png", href="images/pan-blue.png", sizes="32x32")
     title panX
+
+    include plausible
+
   body
     include navbar
     .container
